@@ -32,6 +32,10 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6' // swagger
 
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // jwt
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5' // jwt
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // jwt
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
@@ -42,6 +46,10 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+test {
+	jvmArgs '-Djdk.attach.allowAttachSelf=true'
 }
 
 tasks.named('test') {
